--- a/home.html
+++ b/home.html
@@ -136,21 +136,69 @@
     <!-- transfar money -->
     <div class="form" id="transfer-money-parent" style="display: none;">
       <h1 class="text-lg font-semibold py-3">Transfer Money</h1>
+      <form action="" class="bg-white rounded-2xl p-5">
+        <div class="mt-3">
+          <label class="font-semibold" for="">User account number</label> <br />
+          <input id="user-account-number" type="number" placeholder="Enter 11 digits bank account number"
+            class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
+        </div>
+        <div class="mt-3">
+          <label class="font-semibold" for="">Amount</label> <br />
+          <input id="transfer-amount" type="number" placeholder="Enter amount to transfer"
+            class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
+        </div>
+        <div class="mt-3">
+          <label class="font-semibold" for="">Pin Number</label> <br />
+          <input id="user-pin" type="number" placeholder="Enter 4 digits pin number"
+            class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
+        </div>
+        <button id="transfer-btn" class="btn bg-[#0874F2] text-white mt-4 w-full rounded-3xl">Send Now</button>
+      </form>
     </div>
 
     <!-- Get bonus -->
     <div class="form" id="get-bonus-parent" style="display: none;">
       <h1 class="text-lg font-semibold py-3">Get Bonus</h1>
+      <form action="" class="bg-white rounded-2xl p-5">
+        <div class="">
+          <label class="font-semibold" for="">Enter Bonus Coupon</label> <br />
+          <input id="" type="number" placeholder="Enter your coupon"
+            class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
+        </div>
+        <button id="" class="btn bg-[#0874F2] text-white mt-4 w-full rounded-3xl">Get Bonus</button>
+      </form>
     </div>
 
     <!-- Pay Bill -->
     <div class="form" id="bill-button-parent" style="display: none;">
       <h1 class="text-lg font-semibold py-3">Pay Bill</h1>
-    </div>
-
-    <!-- Pay Bill -->
-    <div class="form" id="bill-button-parent" style="display: none;">
-      <h1 class="text-lg font-semibold py-3">Pay Bill</h1>
+      <form action="" class="bg-white rounded-2xl p-5">
+        <div>
+          <h2 class="font-semibold">Select To pay</h2>
+          <select id="" class="select bg-[#f4f5f7] rounded-3xl focus:outline-none w-full mt-2">
+            <option disabled selected>Select Bank</option>
+            <option>Southeast Bank PLC</option>
+            <option>UCB Bank PLC</option>
+            <option>Sonali Bank PLC</option>
+          </select>
+        </div>
+        <div class="mt-3">
+          <label class="font-semibold" for="">Biller account number</label> <br />
+          <input id="" type="number" placeholder="Enter 11 digits bank account number"
+            class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
+        </div>
+        <div class="mt-3">
+          <label class="font-semibold" for="">Amount to pay</label> <br />
+          <input id="" type="number" placeholder="Add amount to pay"
+            class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
+        </div>
+        <div class="mt-3">
+          <label class="font-semibold" for="">Pin Number</label> <br />
+          <input id="" type="number" placeholder="Enter 4 digits pin number"
+            class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
+        </div>
+        <button id="" class="btn bg-[#0874F2] text-white mt-4 w-full rounded-3xl">Pay Now</button>
+      </form>
     </div>
 
     <!-- Transaction -->
