get bonus section done

--- a/home.html
+++ b/home.html
@@ -162,10 +162,10 @@
       <form action="" class="bg-white rounded-2xl p-5">
         <div class="">
           <label class="font-semibold" for="">Enter Bonus Coupon</label> <br />
-          <input id="" type="number" placeholder="Enter your coupon"
+          <input id="copun-code-input" type="text" placeholder="Enter your coupon"
             class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
         </div>
-        <button id="" class="btn bg-[#0874F2] text-white mt-4 w-full rounded-3xl">Get Bonus</button>
+        <button id="get-bonus-button" class="btn bg-[#0874F2] text-white mt-4 w-full rounded-3xl">Get Bonus</button>
       </form>
     </div>
 
