--- a/home.html
+++ b/home.html
@@ -184,20 +184,20 @@
         </div>
         <div class="mt-3">
           <label class="font-semibold" for="">Biller account number</label> <br />
-          <input id="" type="number" placeholder="Enter 11 digits bank account number"
+          <input id="pay-bill-account-number" type="number" placeholder="Enter 11 digits bank account number"
             class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
         </div>
         <div class="mt-3">
           <label class="font-semibold" for="">Amount to pay</label> <br />
-          <input id="" type="number" placeholder="Add amount to pay"
+          <input id="pay-bill-amount" type="number" placeholder="Add amount to pay"
             class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
         </div>
         <div class="mt-3">
           <label class="font-semibold" for="">Pin Number</label> <br />
-          <input id="" type="number" placeholder="Enter 4 digits pin number"
+          <input id="pay-bill-pin" type="number" placeholder="Enter 4 digits pin number"
             class="input bg-[#f4f5f7] mt-2 rounded-3xl w-full focus:outline-none" />
         </div>
-        <button id="" class="btn bg-[#0874F2] text-white mt-4 w-full rounded-3xl">Pay Now</button>
+        <button id="pay-bill-button" class="btn bg-[#0874F2] text-white mt-4 w-full rounded-3xl">Pay Now</button>
       </form>
     </div>
 
