transfer money done ok

--- a/home.html
+++ b/home.html
@@ -204,13 +204,11 @@
     <!-- Transaction -->
     <div class="form" id="transaction-button-parent" style="display: none;">
       <div class="flex items-center justify-between">
-        <h1 class="text-lg font-semibold py-3">Transaction</h1>
-        <p class="text-[#08080880]">View All</p>
+        <h1 id="transaction-title" class="text-lg font-semibold py-3">Transaction</h1>
+        <p id="view-all" class="text-[#08080880]">View All</p>
       </div>
 
-      <div id="transaction-container">
-        
-      </div>
+      <div id="transaction-container"></div>
 
     </div>
   </div>
